apps/gitea/dev/patch-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: main 
spec:
  type: NodePort 
  externalIPs: 
    - 151.115.73.33
