apps/gitea/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main 
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - repo.edtechworld.pl
    secretName: repo-edtechworld-pl-tls
  rules:
    - host: repo.edtechworld.pl
      http:
        paths:
          - path: / 
            pathType: Prefix  
            backend:
              service: { name: main, port: { name: http } }
